# WB-Ranker-Bot

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_api_search.py  test_search.py
app/: bot.py  config.py  exporter.py  fileio.py  ports.py  services.py  utils.py  wb_adapter.py  wb_playwright_adapter.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
tests/: test_bot.py  test_config.py  test_docker.py  test_exporter.py  test_fileio.py  test_ports.py  test_services.py  test_utils.py  test_wb_adapter.py
